@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.89 2007-09-22 20:28:56 cmatsuoka Exp $
+$Id: ChangeLog,v 1.90 2007-09-24 01:13:33 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -16,6 +16,8 @@ Stable versions
 	- fixed OSS sequencer driver timing (reported by Reynir Stefansson)
 	- fixed BMP/Audacious plugin to build also as XMMS plugin
 	- fixed Impulse Tracker identification in S3M loader
+	- fixed Module Protector test to recognize mods from "Made In Croatia"
+	- fixed crash when scanning modules with length zero (bug #1800766)
 	- prowizard code cleanup
 
 2.2.1 (20070917)
